--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
               </div>
               <a
-                href="./media/mohamed-ashraf-resume.pdf"
+                href="./media/Mohamed Ashraf - Frontend Developer.pdf"
                 download="Mohamed-Ashraf-resume"
                 >Download CV</a
               >
